--- a/web-app/less/theme-tweaks.less
+++ b/web-app/less/theme-tweaks.less
@@ -81,4 +81,11 @@
 	body.main-menu-fixed:not(.mme) #main-wrapper {
 		padding-left: 0px;
 	}
+	
+	.mme {
+		#content-wrapper {
+			left: 0;
+			padding-left: @main-menu-width - @main-menu-collapsed-width + @content-wrapper-padding;
+		}
+	}
 }
